--- a/README
+++ b/README
@@ -14,3 +14,6 @@ right.
  
 Photo textures of Instruments were used with kind permission
 from http://www.cockpitinstrumente.de.
+
+Textures "Black8" and "Black 13" were kindly donated 
+by B. van Speybroek.
